# FallingSandSurvival

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  FallingSandSurvival.sln  LICENSE  LINUX.txt  README.md  SETUP.txt  codeanalysis.ruleset  setup.sh
.github/: CONTRIBUTING.md
FallingSandSurvival/: .editorconfig  Background.cpp  Background.hpp  Biome.cpp  Biome.hpp  CLArgs.hpp  CMakeLists.txt  Chunk.cpp  Chunk.h  Chunk.hpp  ChunkReadyToMerge.hpp  Controls.cpp  Controls.h  Controls.hpp  CreateWorldUI.cpp  DebugCheatsUI.cpp  DebugDrawUI.cpp  DebugUI.cpp  DefaultGenerator.cpp  DiscordIntegration.cpp  DiscordIntegration.hpp  DiscordUtils.hpp  Drawing.cpp  Drawing.h  Drawing.hpp  Entity.cpp  Entity.h  Entity.hpp  FallingSandSurvival.rc  FallingSandSurvival.vcxproj  FallingSandSurvival.vcxproj.filters  Game.cpp  Game.hpp  GameDir.cpp  GameDir.hpp  IngameUI.cpp  Item.cpp  Item.hpp  Macros.hpp  MainMenuUI.cpp  (+63 more)
FallingSandSurvival/assets/: fire_mock_5.pdn  title.txt
FallingSandSurvival/assets/audio/: title.ptcop
FallingSandSurvival/assets/audio/fmod/Assets/: SOURCES.txt  gui_hover.pxt  gui_tab.pxt
FallingSandSurvival/assets/audio/fmod/Metadata/: Master.xml  Mixer.xml  Tags.xml  Workspace.xml
FallingSandSurvival/assets/audio/fmod/Metadata/Asset/: {471c6646-f45e-4bb8-be79-d84235f52fb2}.xml
FallingSandSurvival/assets/audio/fmod/Metadata/AudioFile/: {03ce412b-2680-4447-8a34-9eaafc50a69c}.xml  {09654da6-22cf-4bff-9523-a6cd0532f98a}.xml  {0e27ac7f-68b3-4792-a970-c0121d4bf48d}.xml  {1cc4c9ac-ac08-4ce3-bdf2-33e4ae00e6c4}.xml  {2d1ba5a1-9f21-4392-bec8-418c0f0b5e6a}.xml  {3799c34e-c1df-4449-a28b-bd45fa6a9ab7}.xml  {3903b119-76c2-43b7-9798-366ab2d30c48}.xml  {46af4e3c-cb21-42f5-aa3d-57063b9a46d3}.xml  {62898b19-acc4-4f6d-849f-0b9835ad3694}.xml  {74701d76-2ed2-4bce-a42b-0a54cb56e192}.xml  {876f7346-a152-4819-9cd1-4feaa1f8b670}.xml  {98990360-7aa6-4e2a-ada9-7e439c516f2a}.xml  {a4fcbe02-3cdc-4c01-b8a4-dc1536ffd035}.xml  {b3a11935-5747-4646-a91f-69f422cde6d9}.xml  {cf4937b3-cc10-4f75-938b-784c3805218a}.xml  {d29c44be-c516-4ee0-95ed-2dbfaff07a6f}.xml  {e04e0100-d608-4bf8-becd-524bd67cfb60}.xml  {f6765d7e-2241-43b4-a7c2-e89b0da2e072}.xml  {fcaa958a-33a5-41ec-b767-38ad7fae6d7a}.xml
FallingSandSurvival/assets/audio/fmod/Metadata/Bank/: {ceb51216-5bcb-4821-a74d-5e08cc8b0438}.xml
FallingSandSurvival/assets/audio/fmod/Metadata/BankFolder/: {b18b5680-87ec-4092-a477-270ad21210fc}.xml
FallingSandSurvival/assets/audio/fmod/Metadata/EffectPresetFolder/: {e98d426b-32b0-46af-8cde-668a61d0a127}.xml
FallingSandSurvival/assets/audio/fmod/Metadata/EncodingSetting/: {0deea671-fff2-4577-b2b2-d0deeb943149}.xml
FallingSandSurvival/assets/audio/fmod/Metadata/Event/: {34c162fe-b59d-4c78-bb4e-99704366d6d3}.xml  {45ef93c4-6e10-455f-aac5-0ae9623247a0}.xml  {66a6799c-1d98-4f41-af59-e6b7755eb696}.xml  {66b62e12-efb6-4c7f-9ccd-2fcca574c323}.xml  {6e619f6f-ab27-40b8-b46e-89a16bd791e4}.xml  {7fad079d-79e6-40d4-8746-8f10c3da4dad}.xml  {86d3e3c2-e4f4-4fce-a1b6-8c2bd1f04279}.xml  {8e582ccb-5745-43c8-ad12-ec56e8b2468a}.xml  {8ea55cc2-94ff-4d2b-ab07-f6d51da3ec87}.xml  {925f05bf-9f8b-4871-b690-ff1776749d0c}.xml  {94a6cef9-de10-40d5-b261-eb4a789e88c2}.xml
FallingSandSurvival/assets/audio/fmod/Metadata/EventFolder/: {75b8d149-924f-4b76-aa08-89467e37ca8c}.xml  {9dd2a428-c6c5-45bb-9b8e-6972f40badb3}.xml  {a2d906d3-67fc-486d-a383-8335a2286a1f}.xml  {bffc301b-de10-476c-a036-c1e9ec6d68d7}.xml  {fb0a2284-b5e2-47c1-8079-9f44762b9ff9}.xml
FallingSandSurvival/assets/audio/fmod/Metadata/Group/: {17edee9d-0d7b-40b0-a9d4-c98666213219}.xml  {181a5560-65e7-4bb2-89f8-bedca5a3d996}.xml  (+4 more)
FallingSandSurvival/assets/backgrounds/TestOverworld/: layers.pdn
FallingSandSurvival/assets/title/: splash.pdn
FallingSandSurvival/data/shaders/: fire.frag  fire2.frag  lighting.frag  newLighting.frag  simpleLighting.frag  simpleLighting2.frag  water.frag  waterFlow.frag
FallingSandSurvival/gamedir/worlds/mainMenu/: world.txt
FallingSandSurvival/lib/: README.md
FallingSandSurvival/lib/AudioAdventure/: AudioAdventure.vcxproj  AudioAdventure.vcxproj.filters  LICENSE.md
FallingSandSurvival/lib/AudioAdventure/include/: AudioEngine.h
FallingSandSurvival/lib/AudioAdventure/resource/: Master Bank.bank  Master Bank.strings.bank  data.lvl
FallingSandSurvival/lib/AudioAdventure/source/: AudioEngine.cpp
FallingSandSurvival/lib/FMOD/: SETUP_README.txt
FallingSandSurvival/lib/FMOD/lib/x64/: fmodL_vc.lib  fmod_vc.lib  libfmod.so.11.7  libfmod.so.12.6  libfmodL.so.11.7  libfmodL.so.12.6
FallingSandSurvival/lib/FMOD/lib/x86/: fmodL_vc.lib  fmod_vc.lib  libfmod.so.11.7  libfmod.so.12.6  libfmodL.so.11.7  libfmodL.so.12.6
FallingSandSurvival/lib/FMOD_studio/: SETUP_README.txt
FallingSandSurvival/lib/FMOD_studio/inc/: fmod_studio.cs
FallingSandSurvival/lib/FMOD_studio/lib/x64/: fmodstudioL_vc.lib  fmodstudio_vc.lib  libfmodstudio.so.11  libfmodstudio.so.11.7  libfmodstudio.so.12.6  libfmodstudioL.so.11  libfmodstudioL.so.11.7  libfmodstudioL.so.12.6
FallingSandSurvival/lib/FMOD_studio/lib/x86/: fmodstudioL_vc.lib  fmodstudio_vc.lib  libfmodstudio.so.11.7  libfmodstudio.so.12.6  libfmodstudioL.so.11.7  libfmodstudioL.so.12  libfmodstudioL.so.12.6
FallingSandSurvival/lib/FastNoiseSIMD/: FastNoiseSIMD.h
FallingSandSurvival/lib/cpp-marching-squares-master/: .gitmodules  Direction.h  LICENSE  MarchingSquares.h  README.md  Utility.h
FallingSandSurvival/lib/cpp-marching-squares-master/test/: test.cpp  test.sln  test.vcxproj
FallingSandSurvival/lib/discord_game_sdk/: SETUP_README.txt
FallingSandSurvival/lib/douglas-peucker/: polygon-simplify.cc  polygon-simplify.hh
FallingSandSurvival/lib/imgui/backends/: imgui_impl_opengl3.h
FallingSandSurvival/lib/polypartition-master/src/: polypartition.cpp
FallingSandSurvival/lib/polypartition-master/test/: image.cpp  image.h  imageio.cpp  imageio.h  test.cpp
FallingSandSurvival/lib/sparsehash/: dense_hash_map.h  sparse_hash_map.h  sparsetable
FallingSandSurvival/lib/sparsehash/internal/: densehashtable.h  sparsehashtable.h
FallingSandSurvival/lib/steam/: SETUP_README.txt
(+18 files in other folders)
